add wordpress headless cms and change the phone numbers in the footer and added globalconfig file

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,13 @@ body {
   scroll-behavior: smooth;
 }
 
+.subgrid {
+  display: subgrid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
 #sidebar-active:checked ~ #overlay {
   display: block;
   position: fixed;
